Fix for <pre> in comments becoming too wide

--- a/style/style.scss
+++ b/style/style.scss
@@ -65,6 +65,7 @@ body {
     }
     font-size: 110%;
     text-align: left;
+    max-width: 100%;
 }
 
 #sidebar {
